--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
         <div class="sliderAx h-auto">
             <div id="slider-1" class="container-fluid mx-auto">
               <div class="bg-cover bg-center  h-auto text-white px-10 object-fill h-5/6 relative" style="background-image: url(images/banner2.jpg)">
-                <div class="absolute left-10 top-0 flex items-center h-full">
+                <div class="absolute left-10 top-0 flex items-center h-full xl:visible lg:visible md:visible invisible">
                     <button id="sButton1" onclick="sliderButton1()" class="bg-gray-50 text-gray-500 rounded-full h-10 w-10" ><i class="fas fa-chevron-left flex justify-center items-center"></i></button>
                 </div>
              <div class="max-w-sm md:max-w-xl lg:max-w-screen-md xl:max-w-screen-xl mx-auto flex items-center h-full">
@@ -327,7 +327,7 @@
                     <a href="#" class="bg-red-400 py-4 px-8 text-white font-bold uppercase font-rubic rounded-full hover:bg-red-500 hover:text-gray-100 transition duration-300 ease-in-out">Shop Now</a>
                 </div>
               </div> 
-              <div class="absolute right-10 top-0 flex items-center h-full">
+              <div class="absolute right-10 top-0 flex items-center h-full xl:visible lg:visible md:visible invisible">
                 <button id="sButton2" onclick="sliderButton2() " class="bg-gray-50 text-gray-500 rounded-full h-10 w-10"><i class="fas fa-chevron-right flex justify-center items-center"></i></button>
               </div> 
           </div>
@@ -336,7 +336,7 @@
       
             <div id="slider-2" class="container-fluid mx-auto">
                 <div class="bg-cover bg-center  h-auto text-white px-10 object-fill h-5/6 relative" style="background-image: url(images/banner.jpg)">
-                    <div class="absolute left-10 top-0 flex items-center h-full">
+                    <div class="absolute left-10 top-0 flex items-center h-full xl:visible lg:visible md:visible invisible">
                         <button id="sButton1" onclick="sliderButton1()" class="bg-gray-50 text-gray-500 rounded-full h-10 w-10" ><i class="fas fa-chevron-left flex justify-center items-center"></i></button>
                     </div>
                  <div class="max-w-sm md:max-w-xl lg:max-w-screen-md xl:max-w-screen-xl mx-auto flex items-center h-full">
@@ -347,7 +347,7 @@
                         <a href="#" class="bg-red-400 py-4 px-8 text-white font-bold uppercase font-rubic rounded-full hover:bg-red-500 hover:text-gray-100 transition duration-300 ease-in-out">Shop Now</a>
                     </div>
                   </div> 
-                  <div class="absolute right-10 top-0 flex items-center h-full">
+                  <div class="absolute right-10 top-0 flex items-center h-full xl:visible lg:visible md:visible invisible">
                     <button id="sButton2" onclick="sliderButton2() " class="bg-gray-50 text-gray-500 rounded-full h-10 w-10"><i class="fas fa-chevron-right flex justify-center items-center"></i></button>
                   </div> 
               </div>
