fixed issues and added new page

--- a/blog.html
+++ b/blog.html
@@ -174,6 +174,12 @@
                                         </a>
                                         <a
                                             class="block px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark:bg-transparent dark:hover:bg-gray-600 dark:focus:bg-gray-600 dark:focus:text-white dark:hover:text-white dark:text-gray-800 md:mt-0 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline font-rubic"
+                                            href="wishlist.html"
+                                        >
+                                            WishList
+                                        </a>
+                                        <a
+                                            class="block px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark:bg-transparent dark:hover:bg-gray-600 dark:focus:bg-gray-600 dark:focus:text-white dark:hover:text-white dark:text-gray-800 md:mt-0 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline font-rubic"
                                             href="register.html"
                                         >
                                             Register
@@ -368,6 +374,9 @@
                                                         </li>
                                                         <li class="col-item">
                                                             <a href="account.html" class="">My Account</a>
+                                                        </li>
+                                                        <li class="col-item">
+                                                            <a href="wishlist.html" class="">WishList</a>
                                                         </li>
                                                         <li class="col-item">
                                                             <a href="register.html" class="">Register</a>
@@ -648,7 +657,7 @@
                                         <a href="#" class="footer-info-link">Order History</a>
                                     </li>
                                     <li class="">
-                                        <a href="#" class="footer-info-link">WishList</a>
+                                        <a href="wishlist.html" class="footer-info-link">WishList</a>
                                     </li>
                                     <li class="">
                                         <a href="#" class="footer-info-link">News Letter</a>
