--- a/error.html
+++ b/error.html
@@ -174,6 +174,12 @@
                                         </a>
                                         <a
                                             class="block px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark:bg-transparent dark:hover:bg-gray-600 dark:focus:bg-gray-600 dark:focus:text-white dark:hover:text-white dark:text-gray-800 md:mt-0 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline font-rubic"
+                                            href="wishlist.html"
+                                        >
+                                            WishList
+                                        </a>
+                                        <a
+                                            class="block px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark:bg-transparent dark:hover:bg-gray-600 dark:focus:bg-gray-600 dark:focus:text-white dark:hover:text-white dark:text-gray-800 md:mt-0 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline font-rubic"
                                             href="register.html"
                                         >
                                             Register
@@ -316,9 +322,9 @@
             <div class="container mx-auto">
                 <div class="max-w-xs md:max-w-2xl lg:max-w-screen-xl xl:max-w-screen-xl mx-auto">
                    <div class="text-center pb-10">
-                        <img class="xl:w-2/3 lg:w-2/3 md:w-2/3 w-96 mx-auto" src="images/error.jpg" alt="">
-                        <h2 class="xl:text-2xl lg:text-xl md:text-lg text-sm font-semibold font-rubik">OPPS! PAGE NOT BE FOUND</h2>
-                        <p class="py-7 text-gray-600 font-rubik xl:text-lg lg:text-lg md:text-lg text-sm">Sorry, But the page you are looking for does't exist!</p>
+                        <img class="xl:w-2/3 lg:w-2/3 md:w-2/3 w-96 mx-auto rounded-lg" src="images/error.jpg" alt="">
+                        <h2 class="xl:text-2xl lg:text-xl md:text-lg text-sm font-semibold font-rubik pt-3">OPPS! PAGE NOT BE FOUND</h2>
+                        <p class="py-7 text-gray-600 font-rubik xl:text-lg lg:text-lg md:text-lg text-sm dark:text-gray-300">Sorry, But the page you are looking for does't exist!</p>
                         <a href="index.html" class="bg-pink-500 text-white px-5 py-3 font-semibold xl:text-sm lg:text-sm md:text-sm text-xs">GO TO HOME PAGE</a>
                    </div>
                 </div>
@@ -397,7 +403,7 @@
                                         <a href="#" class="footer-info-link">Order History</a>
                                     </li>
                                     <li class="">
-                                        <a href="#" class="footer-info-link">WishList</a>
+                                        <a href="wishlist.html" class="footer-info-link">WishList</a>
                                     </li>
                                     <li class="">
                                         <a href="#" class="footer-info-link">News Letter</a>
