--- a/shop.html
+++ b/shop.html
@@ -66,7 +66,7 @@
                     class="flex flex-col px-4 mx-auto md:items-center md:justify-between md:flex-row md:px-6 lg:px-8 relative"
                 >
                     <div class="">
-                        <a href="error.html" class="text-gray-800">LOGO</a>
+                        <a href="error.html" class="text-gray-800"><img class="xl:w-28 lg:w-28 md:w-22 w-20" src="images/logo-home2.png" alt="image"></a>
                     </div>
                     <div class="">
                         <div class="md:ml-1 lg:ml-36 xl:ml-56">
@@ -279,7 +279,7 @@
                                         </div>
                                         <div class="">
                                             <div class="flex justify-between items-center pt-5">
-                                                <a href="#" class="font-semibold bg-gray-900 text-white px-6 py-2 hover:text-white hover:bg-red-600 transition duration-300 ease-in-out rounded">View Cart</a>
+                                                <a href="cart.html" class="font-semibold bg-gray-900 text-white px-6 py-2 hover:text-white hover:bg-red-600 transition duration-300 ease-in-out rounded">View Cart</a>
                                                 <a href="checkout.html" class="font-semibold bg-gray-900 text-white px-6 py-2 hover:text-white hover:bg-red-600 transition duration-300 ease-in-out rounded">Checkout</a>
                                             </div>
                                         </div>
@@ -318,7 +318,7 @@
             </div>
         </div>
 
-        <div class="container mx-auto mt-36 flex justify-center">
+        <div class="container mx-auto mt-36 flex justify-center py-20">
             <div class="main-body mx-auto">
                 <div class="left-dashboard">
                     <div class="border-gray-200 border px-5 py-6 dark:border-gray-600">
