--- a/account.html
+++ b/account.html
@@ -66,7 +66,7 @@
                     class="flex flex-col px-4 mx-auto md:items-center md:justify-between md:flex-row md:px-6 lg:px-8 relative"
                 >
                     <div class="">
-                        <a href="error.html" class="text-gray-800">LOGO</a>
+                        <a href="error.html" class="text-gray-800"><img class="xl:w-28 lg:w-28 md:w-22 w-20" src="images/logo-home2.png" alt="image"></a>
                     </div>
                     <div class="">
                         <div class="md:ml-1 lg:ml-36 xl:ml-56">
@@ -279,7 +279,7 @@
                                         </div>
                                         <div class="">
                                             <div class="flex justify-between items-center pt-5">
-                                                <a href="#" class="font-semibold bg-gray-900 text-white px-6 py-2 hover:text-white hover:bg-red-600 transition duration-300 ease-in-out rounded">View Cart</a>
+                                                <a href="cart.html" class="font-semibold bg-gray-900 text-white px-6 py-2 hover:text-white hover:bg-red-600 transition duration-300 ease-in-out rounded">View Cart</a>
                                                 <a href="checkout.html" class="font-semibold bg-gray-900 text-white px-6 py-2 hover:text-white hover:bg-red-600 transition duration-300 ease-in-out rounded">Checkout</a>
                                             </div>
                                         </div>
@@ -323,8 +323,8 @@
             <div class="max-w-xs md:max-w-2xl lg:max-w-screen-xl xl:max-w-screen-xl mx-auto mt-4">
                 <!-- Tabs -->
                 <div class="flex items-center pt-10 pb-5">
-                    <i class="fas fa-user-circle text-gray-700 mb-1"></i>
-                    <p class="text-gray-700 ml-2 font-rubic font-semibold">Profile</p>
+                    <i class="fas fa-user-circle text-gray-700 mb-1 dark:text-gray-200"></i>
+                    <p class="text-gray-700 ml-2 font-rubic font-semibold dark:text-gray-200">Profile</p>
                 </div>
                <div class="xl:flex lg:flex md:flex">
                   <ul id="tabs" class="xl:w-1/4 lg:w-1/4 md:w-2/4 w-full text-center text-center bg-blue-50 h-auto rounded-lg xl:mb-0 lg:mb-0 md:mb-0 mb-20 xl:pb-0 lg:pb-0 md:pb-0 pb-44">
@@ -344,16 +344,16 @@
                       <div id="tab-contents">
                           <div id="first" class="bg-blue-50 px-8 py-10 rounded-lg">
                               <div class="">
-                                  <h1 class="font-semibold font-xl font-rubic pb-3">Personal Information</h1>
+                                  <h1 class="font-semibold font-xl font-rubic pb-3 dark:text-gray-700">Personal Information</h1>
                                 <div class="xl:flex xl:justify-between xl:items-center lg:flex lg:justify-between lg:items-center">
-                                    <input class="dark:bg-gray-800 dark:border-gray-600 border border-gray-300 py-2 rounded-lg shadow-sm focus:outline-none focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500 xl:w-3/6 xl:h-12 lg:w-3/6 lg:h-12 w-full h-12 xl:mb-0 lg:mb-0 md:mb-5 mb-5 xl:mr-2 lg:mr-2 mr-0" type="text" placeholder="First name">
-                                    <input class="dark:bg-gray-800 dark:border-gray-600 border border-gray-300 py-2 rounded-lg shadow-sm focus:outline-none focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500 xl:w-3/6 xl:h-12 lg:w-3/6 lg:h-12 w-full h-12 xl:mb-0 lg:mb-0 md:mb-5 mb-5 xl:ml-2 lg:ml-2 ml-0" type="text" placeholder="Last name">
+                                    <input class="dark:bg-white dark:border-gray-300 border border-gray-300 py-2 rounded-lg shadow-sm focus:outline-none focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500 xl:w-3/6 xl:h-12 lg:w-3/6 lg:h-12 w-full h-12 xl:mb-0 lg:mb-0 md:mb-5 mb-5 xl:mr-2 lg:mr-2 mr-0" type="text" placeholder="First name">
+                                    <input class="dark:bg-white dark:border-gray-300 border border-gray-300 py-2 rounded-lg shadow-sm focus:outline-none focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500 xl:w-3/6 xl:h-12 lg:w-3/6 lg:h-12 w-full h-12 xl:mb-0 lg:mb-0 md:mb-5 mb-5 xl:ml-2 lg:ml-2 ml-0" type="text" placeholder="Last name">
                                 </div>
                                 <div class="mt-7">
-                                    <input class="dark:bg-gray-800 dark:border-gray-600 border border-gray-300 py-2 rounded-lg shadow-sm focus:outline-none focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500 w-full h-12 xl:mb-0 lg:mb-0 md:mb-5 mb-5" type="text" placeholder="Last name">
+                                    <input class="dark:bg-white dark:border-gray-300 border border-gray-300 py-2 rounded-lg shadow-sm focus:outline-none focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500 w-full h-12 xl:mb-0 lg:mb-0 md:mb-5 mb-5" type="text" placeholder="Last name">
                                 </div>
                                 <div class="mt-7 xl:flex xl:justify-between xl:items-center lg:flex lg:justify-between lg:items-center">
-                                    <input class="dark:bg-gray-800 dark:border-gray-600 border border-gray-300 py-2 rounded-lg shadow-sm focus:outline-none focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500 xl:w-3/6 lg:w-3/6 w-full h-12 xl:mb-0 lg:mb-0 md:mb-5 mb-5 xl:mr-2 lg:mr-2 mr-0" type="text" placeholder="Phone Number">
+                                    <input class="dark:bg-white dark:border-gray-300 border border-gray-300 py-2 rounded-lg shadow-sm focus:outline-none focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500 xl:w-3/6 lg:w-3/6 w-full h-12 xl:mb-0 lg:mb-0 md:mb-5 mb-5 xl:mr-2 lg:mr-2 mr-0" type="text" placeholder="Phone Number">
                                     
                                     <select class="xl:w-3/6 lg:w-3/6 w-full text-gray-500 border border-gray-300 h-12 rounded-lg shadow-sm focus:outline-none focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500 xl:ml-2 lg:ml-2 ml-0">
                                         <option value="">Selct Gender</option>
@@ -378,8 +378,8 @@
                                     </select>
                                 </div>
                                 <div class="mt-7 xl:flex xl:justify-between xl:items-center lg:flex lg:justify-between lg:items-center">
-                                    <input class="dark:bg-gray-800 dark:border-gray-600 border border-gray-300 py-2 rounded-lg shadow-sm focus:outline-none focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500 xl:w-3/6 xl:h-12 lg:w-3/6 lg:h-12 w-full h-12 xl:mb-0 lg:mb-0 md:mb-5 mb-5 xl:mr-2 lg:mr-2 mr-0" type="text" placeholder="Street">
-                                    <input class="dark:bg-gray-800 dark:border-gray-600 border border-gray-300 py-2 rounded-lg shadow-sm focus:outline-none focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500 xl:w-3/6 xl:h-12 lg:w-3/6 lg:h-12 w-full h-12 xl:mb-0 lg:mb-0 md:mb-5 mb-5 xl:ml-2 lg:ml-2 ml-0" type="text" placeholder="Portal Code">
+                                    <input class="dark:bg-white dark:border-gray-300 border border-gray-300 py-2 rounded-lg shadow-sm focus:outline-none focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500 xl:w-3/6 xl:h-12 lg:w-3/6 lg:h-12 w-full h-12 xl:mb-0 lg:mb-0 md:mb-5 mb-5 xl:mr-2 lg:mr-2 mr-0" type="text" placeholder="Street">
+                                    <input class="dark:bg-white dark:border-gray-300 border border-gray-300 py-2 rounded-lg shadow-sm focus:outline-none focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500 xl:w-3/6 xl:h-12 lg:w-3/6 lg:h-12 w-full h-12 xl:mb-0 lg:mb-0 md:mb-5 mb-5 xl:ml-2 lg:ml-2 ml-0" type="text" placeholder="Portal Code">
                                 </div>
                                 <div class="mt-7 flex justify-end items-center">
                                     <a href="#" class="bg-yellow-300 text-white w-32 py-3 rounded-lg text-center hover:bg-yellow-400 transition duration-300 ease-in-out">Save</a>
@@ -388,16 +388,16 @@
                           </div>
                           <div id="second" class="bg-blue-50 px-8 py-10 rounded-lg">
                             <div class="">
-                                <h1 class="font-semibold font-xl font-rubic pb-3">Account Information</h1>
+                                <h1 class="font-semibold font-xl font-rubic pb-3 dark:text-gray-700">Account Information</h1>
                               <div class="xl:flex xl:justify-between xl:items-center lg:flex lg:justify-between lg:items-center">
-                                  <input class="dark:bg-gray-800 dark:border-gray-600 border border-gray-300 py-2 rounded-lg shadow-sm focus:outline-none focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500 xl:w-3/6 xl:h-12 lg:w-3/6 lg:h-12 w-full h-12 xl:mb-0 lg:mb-0 md:mb-5 mb-5 xl:mr-2 lg:mr-2 mr-0" type="text" placeholder="First name">
-                                  <input class="dark:bg-gray-800 dark:border-gray-600 border border-gray-300 py-2 rounded-lg shadow-sm focus:outline-none focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500 xl:w-3/6 xl:h-12 lg:w-3/6 lg:h-12 w-full h-12 xl:mb-0 lg:mb-0 md:mb-5 mb-5 xl:ml-2 lg:ml-2 ml-0" type="text" placeholder="Last name">
+                                  <input class="dark:bg-white dark:border-gray-300 border border-gray-300 py-2 rounded-lg shadow-sm focus:outline-none focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500 xl:w-3/6 xl:h-12 lg:w-3/6 lg:h-12 w-full h-12 xl:mb-0 lg:mb-0 md:mb-5 mb-5 xl:mr-2 lg:mr-2 mr-0" type="text" placeholder="First name">
+                                  <input class="dark:bg-white dark:border-gray-300 border border-gray-300 py-2 rounded-lg shadow-sm focus:outline-none focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500 xl:w-3/6 xl:h-12 lg:w-3/6 lg:h-12 w-full h-12 xl:mb-0 lg:mb-0 md:mb-5 mb-5 xl:ml-2 lg:ml-2 ml-0" type="text" placeholder="Last name">
                               </div>
                               <div class="mt-7">
-                                  <input class="dark:bg-gray-800 dark:border-gray-600 border border-gray-300 py-2 rounded-lg shadow-sm focus:outline-none focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500 w-full h-12 xl:mb-0 lg:mb-0 md:mb-5 mb-5" type="text" placeholder="Last name">
+                                  <input class="dark:bg-white dark:border-gray-300 border border-gray-300 py-2 rounded-lg shadow-sm focus:outline-none focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500 w-full h-12 xl:mb-0 lg:mb-0 md:mb-5 mb-5" type="text" placeholder="Last name">
                               </div>
                               <div class="mt-7 xl:flex xl:justify-between xl:items-center lg:flex lg:justify-between lg:items-center">
-                                  <input class="dark:bg-gray-800 dark:border-gray-600 border border-gray-300 py-2 rounded-lg shadow-sm focus:outline-none focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500 xl:w-3/6 lg:w-3/6 w-full h-12 xl:mb-0 lg:mb-0 md:mb-5 mb-5 xl:mr-2 lg:mr-2 mr-0" type="text" placeholder="Phone Number">
+                                  <input class="dark:bg-white dark:border-gray-300 border border-gray-300 py-2 rounded-lg shadow-sm focus:outline-none focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500 xl:w-3/6 lg:w-3/6 w-full h-12 xl:mb-0 lg:mb-0 md:mb-5 mb-5 xl:mr-2 lg:mr-2 mr-0" type="text" placeholder="Phone Number">
                                   
                                   <select class="xl:w-3/6 lg:w-3/6 w-full text-gray-500 border border-gray-300 h-12 rounded-lg shadow-sm focus:outline-none focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500 xl:ml-2 lg:ml-2 ml-0">
                                       <option value="">Selct Gender</option>
@@ -422,8 +422,8 @@
                                   </select>
                               </div>
                               <div class="mt-7 xl:flex xl:justify-between xl:items-center lg:flex lg:justify-between lg:items-center">
-                                  <input class="dark:bg-gray-800 dark:border-gray-600 border border-gray-300 py-2 rounded-lg shadow-sm focus:outline-none focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500 xl:w-3/6 xl:h-12 lg:w-3/6 lg:h-12 w-full h-12 xl:mb-0 lg:mb-0 md:mb-5 mb-5 xl:mr-2 lg:mr-2 mr-0" type="text" placeholder="Street">
-                                  <input class="dark:bg-gray-800 dark:border-gray-600 border border-gray-300 py-2 rounded-lg shadow-sm focus:outline-none focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500 xl:w-3/6 xl:h-12 lg:w-3/6 lg:h-12 w-full h-12 xl:mb-0 lg:mb-0 md:mb-5 mb-5 xl:ml-2 lg:ml-2 ml-0" type="text" placeholder="Portal Code">
+                                  <input class="dark:bg-white dark:border-gray-300 border border-gray-300 py-2 rounded-lg shadow-sm focus:outline-none focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500 xl:w-3/6 xl:h-12 lg:w-3/6 lg:h-12 w-full h-12 xl:mb-0 lg:mb-0 md:mb-5 mb-5 xl:mr-2 lg:mr-2 mr-0" type="text" placeholder="Street">
+                                  <input class="dark:bg-white dark:border-gray-300 border border-gray-300 py-2 rounded-lg shadow-sm focus:outline-none focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500 xl:w-3/6 xl:h-12 lg:w-3/6 lg:h-12 w-full h-12 xl:mb-0 lg:mb-0 md:mb-5 mb-5 xl:ml-2 lg:ml-2 ml-0" type="text" placeholder="Portal Code">
                               </div>
                               <div class="mt-7 flex justify-end items-center">
                                   <a href="#" class="bg-yellow-300 text-white w-32 py-3 rounded-lg text-center hover:bg-yellow-400 transition duration-300 ease-in-out">Save</a>
