--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                     <p class="font-bold text-red-400 text-xl uppercase">Flowe & gift</p>
                     <h1 class="xl:text-6xl lg:text-4xl md:text-2xl text-xl text-gray-900 font-bold font-rubic py-4">GET UP TO 75%</h1>
                     <p class="text-lg text-gray-500 leading-relaxed mb-10 leading-none">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis voluptatibus perferendis ipsa, accusamus nam voluptates!</p>
-                    <a href="#" class="bg-red-400 py-4 px-8 text-white font-bold uppercase font-rubic rounded-full hover:bg-red-500 hover:text-gray-100 transition duration-300 ease-in-out">Shop Now</a>
+                    <a href="shop.html" class="bg-red-400 py-4 px-8 text-white font-bold uppercase font-rubic rounded-full hover:bg-red-500 hover:text-gray-100 transition duration-300 ease-in-out">Shop Now</a>
                 </div>
               </div> 
               <div class="absolute right-10 top-0 flex items-center h-full xl:visible lg:visible md:visible invisible">
