--- a/contact.html
+++ b/contact.html
@@ -217,7 +217,7 @@
                                     <i class="fas fa-shopping-cart text-gray-500 mr-7 hover:text-red-600 cursor-pointer transition duration-300 ease-in-out"></i>
                                     <p id="demo" class="absolute -top-3 right-3 h-4 w-4 bg-red-600 rounded-full text-white flex justify-center items-center text-xs">3</p>
                                 </button>
-                                <ul class="dropdown-content z-10 bg-white absolute xl:right-0 lg:right-0 md:right-0 sm:right-0 -right-16 hidden text-gray-700 pt-1 xl:w-80 lg:w-80 md:w-80 w-80">
+                                <ul class="dropdown-content pt-10 z-10 bg-white absolute xl:right-0 lg:right-0 md:right-0 sm:right-0 -right-16 hidden text-gray-700 pt-1 xl:w-80 lg:w-80 md:w-80 w-80">
                                     <li class="shadow-lg px-3 py-3 mt-5">
                                         <div class="border-b-2 border-gray-200 pb-5">
                                             <div class="flex justify-between items-center">
@@ -303,7 +303,7 @@
                                     <img src="images/user.jpeg" class="xl:w-10 lg:w-10 md:w-10 w-8 h-auto rounded-full" alt="image">
                                     <h1 class="text-gray-600 text-sm font-medium xl:block lg:block md:block hidden ml-2 group-hover:text-red-600 transition duration-300 ease-in-out">John Doe</h1>
                                 </button>
-                                <ul class="dropdown-content z-10 bg-white rounded shadow-lg absolute xl:right-0 lg:right-0 md:right-0 sm:right-0 -right-4 hidden text-gray-700 pt-1 w-44">
+                                <ul class="dropdown-content pt-10 z-10 bg-white rounded shadow-lg absolute xl:right-0 lg:right-0 md:right-0 sm:right-0 -right-4 hidden text-gray-700 pt-1 w-44">
                                     <li class="shadow-lg px-3 py-3 mt-5">
                                         <h1 class="pb-1 border-b border-gray-300 xl:hidden lg:hidden md:hidden block mb-3 font-semibold">John Doe</h1>
                                         <div class="py-1"><a href="account.html" class="text-gray-600 font-rubic hover:text-red-600 transition duration-300 ease-in-out">My Account</a></div>
